# qsol-extension

./: .gitignore  Cargo.toml  README.md
extension/: package-lock.json  package.json  rollup.config.js
extension/public/: global.css  index.html  manifest-firefox.json  manifest.json
extension/src/: App.svelte  Footer.svelte  Navbar.svelte
extension/src/content-scripts/: injection.js  message_handler.js
extension/src/js/: backend.js  settings.js  utils.js
extension/src/pages/: AddWallet.svelte  Dashboard.svelte  Login.svelte  Prompt.svelte  RequestAccounts.svelte  RequestAuthentication.svelte  RequestTransaction.svelte  SendTransaction.svelte  Settings.svelte
extension/src/service-worker/: background.js
lib/: package.json  tsconfig.json
lib/src/: index.ts
qubic-wasm/: Cargo.toml
qubic-wasm/src/: crypto.rs  lib.rs
