[package]
name = "qubic-wasm"
version = "0.1.0"
authors = ["Mineco1006 <plakolm1006@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
qubic-types = { path = "../../qubic-utils/qubic-types", features = ["serde"] }
qubic-tcp-types = { path = "../../qubic-utils/qubic-tcp-types" }
qubic-rpc-types = { path = "../../qubic-utils/qubic-rpc-types" }
reqwest = { version = "*", default-features = false, features = ["rustls", "json"] }
wasm-timer = "*"
wbg-rand = "*"
sha3 = "*"
hex = "*"
serde = { version = "*", features = ["derive"]}
serde-wasm-bindgen = "*"
aes-gcm-siv = "*"
kangarootwelve = "0.1.2"


# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
serde_json = "*"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
